--- a/project/index.html
+++ b/project/index.html
@@ -11,9 +11,15 @@
 
 <body>
   <div class="topbar">
-    <div class="title">
-      <h1>MAG Performance Dashboard</h1>
-      <div class="subtitle">World & European Championships (2022–2024)</div>
+    <div class="left-group">
+      <div class="brand">
+        <img src="assets/logo.png" alt="World Gymnastics logo">
+      </div>
+
+      <div class="title">
+        <h1>MAG Performance Dashboard</h1>
+        <div class="subtitle">World & European Championships (2022–2024)</div>
+      </div>
     </div>
 
     <div class="filters">
